--- a/frontend/my-movies/package.json
+++ b/frontend/my-movies/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.2",
     "axios": "^1.11.0",
+    "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.6",
     "jwt-decode": "^4.0.0",
     "next": "15.5.0",
     "react": "19.1.0",
