--- a/graphQL-Training/package.json
+++ b/graphQL-Training/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "backend",
+  "name": "graphql-training",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mansahib-successiveTech/GraphQL-Training.git"
+  },
   "keywords": [],
-  "type": "module",
   "author": "",
   "license": "ISC",
-  "description": "",
+  "bugs": {
+    "url": "https://github.com/Mansahib-successiveTech/GraphQL-Training/issues"
+  },
+  "homepage": "https://github.com/Mansahib-successiveTech/GraphQL-Training#readme",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "joi": "^18.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.2",
-    "morgan": "^1.10.1",
     "@apollo/server": "^5.0.0",
     "@as-integrations/express5": "^1.1.2",
     "@graphql-tools/graphql-file-loader": "^8.0.22",
     "@graphql-tools/load": "^8.1.2",
     "@graphql-tools/load-files": "^7.0.1",
     "@graphql-tools/merge": "^9.1.1",
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "graphql": "^16.11.0",
     "graphql-subscriptions": "^3.0.0",
     "graphql-ws": "^6.0.6",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.2",
     "ws": "^8.18.3"
-    
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
