--- a/frontend/my-movies/package.json
+++ b/frontend/my-movies/package.json
@@ -9,16 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@apollo/client": "^4.0.2",
+    "@apollo/client": "^3.14.0",
     "axios": "^1.11.0",
-    "graphql": "^16.11.0",
+    "graphql": "^15.10.1",
     "graphql-ws": "^6.0.6",
     "jwt-decode": "^4.0.0",
     "next": "15.5.0",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
